--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "safestart":"node --experimental-modules src/server.js",
+    "prod": "pm2 start npm -- run safestart"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +15,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-joi-validation": "^5.0.0",
-    "joi": "^17.3.0"
+    "joi": "^17.3.0",
+    "pm2": "^4.5.1"
   }
 }
