--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "safestart":"node --experimental-modules src/server.js",
+    "safestart": "node --experimental-modules src/server.js",
     "prod": "pm2 start npm -- run safestart"
   },
   "keywords": [],
@@ -17,5 +17,14 @@
     "express-joi-validation": "^5.0.0",
     "joi": "^17.3.0",
     "pm2": "^4.5.1"
+  },
+  "devDependencies": {
+    "eslint": "^7.16.0",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.3.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "prettier": "2.2.1"
   }
 }
