--- a/package.json
+++ b/package.json
@@ -7,24 +7,32 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "safestart": "node --experimental-modules src/server.js",
-    "prod": "pm2 start npm -- run safestart"
+    "prod": "pm2 start npm -- run safestart",
+    "dev" : "nodemon src/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "express": "^4.17.1",
     "express-joi-validation": "^5.0.0",
     "joi": "^17.3.0",
-    "pm2": "^4.5.1"
+    "mongoose": "^5.11.8",
+    "pm2": "^4.5.1",
+    "validator": "^13.5.2"
   },
   "devDependencies": {
     "eslint": "^7.16.0",
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-mocha": "^8.0.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.3.0",
     "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-security": "^1.4.0",
+    "mocha": "^8.2.1",
+    "nodemon": "^2.0.6",
     "prettier": "2.2.1"
   }
 }
