--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js\n",
     "safestart": "node --experimental-modules src/server.js",
     "prod": "pm2 start npm -- run safestart",
-    "dev" : "nodemon src/server.js"
+    "dev": "nodemon src/server.js"
   },
   "keywords": [],
   "author": "",
@@ -31,8 +31,13 @@
     "eslint-plugin-prettier": "^3.3.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-security": "^1.4.0",
-    "mocha": "^8.2.1",
+    "jest": "^26.6.3",
+    "mockingoose": "^2.13.2",
     "nodemon": "^2.0.6",
     "prettier": "2.2.1"
+  },
+  "jest": {
+    "verbose": true,
+    "testEnvironment": "node"
   }
 }
