--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "jest": "^26.6.3",
     "mockingoose": "^2.13.2",
     "nodemon": "^2.0.6",
-    "prettier": "2.2.1"
+    "prettier": "2.2.1",
+    "supertest": "^6.0.1"
   },
   "jest": {
     "verbose": true,
