--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-security": "^1.4.0",
     "jest": "^26.6.3",
     "mockingoose": "^2.13.2",
+    "mongodb-memory-server": "^6.9.2",
     "nodemon": "^2.0.6",
     "prettier": "2.2.1",
     "supertest": "^6.0.1"
