--- a/package.json
+++ b/package.json
@@ -16,12 +16,18 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "connect-redis": "^5.0.0",
     "express": "^4.17.1",
     "express-jsonschema": "^1.1.6",
+    "express-session": "^1.17.1",
     "json-refs": "^3.0.15",
     "mongoose": "^5.11.8",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "pm2": "^4.5.1",
+    "redis": "^3.0.2",
     "swagger-ui-express": "^4.1.6",
+    "uuid": "^8.3.2",
     "validator": "^13.5.2"
   },
   "devDependencies": {
